<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kstc.kstc_v1.MainActivity" >
.
    <TextView
        android:id="@+id/text_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:text="V1.0"
        android:textColor="@color/darkgray" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="hiahiahia"
        android:textColor="@color/darkgray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_wifi_set"
        android:id="@+id/btn_wifi_set"
        android:layout_above="@+id/btn_col"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_col"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_col"
        android:layout_above="@+id/btn_ygcol"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_carcol"
        android:id="@+id/btn_carcol"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ygcol"
        android:id="@+id/btn_ygcol"
        android:layout_above="@+id/btn_carcol"
        android:layout_alignLeft="@+id/btn_col"
        android:layout_alignStart="@+id/btn_col" />

    <Gallery
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gallery" />

</RelativeLayout>